--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,6 +25,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/SortingTests.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.SortingTests-src=SortingTests/src
 includes=**
 jar.compress=false
 javac.classpath=
@@ -67,5 +68,4 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+src.dir=${file.reference.SortingTests-src}
